--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "i18next": "^19.8.9",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
