--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.2.9",
     "i18next": "^19.8.9",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
